# sensitive-data-detector

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  sbom.json
.github/workflows/: ci.yml
LLM_Guard_Extension/extension/: manifest.json
LLM_Guard_Extension/server/: app.py  detector_gpt_oss_120b.py
LLM_Guard_Extension/server/PROMPTS/: ZS_enriquecido_prompt.txt
TEST/: UI.py  chatgpt_wrapper.py  evaluation.py
TEST/CLAUDE/: claude-3-haiku.py
TEST/GEMINI/: gemini1.5-pro.py
TEST/GPT-4o-MINI/: gpt_4o_mini.py
TEST/GPT-OSS-120b/: gpt_oss_120_ZS.py
backend/: .dockerignore  .env.example  Dockerfile  FastAPI.py  __init__.py  detector.py  guard.py  main.py  pyproject.toml  requirements.txt  server.py
backend/api/models/: request.py
backend/api/routes/: detect.py
backend/app/: config.py  detector.py  guard.py  main.py  utils.py
backend/app/api/models/: request.py
backend/app/api/routes/: detect.py  detect_file.py  health.py
backend/app/core/: config.py  detector.py  risk.py
backend/app/services/: document_reader.py  llm_client.py
backend/app/utils/: logger.py  prompt_loader.py
backend/core/: config.py  detector.py
backend/server/: app.py  detector.py  detector_gpt_4o_mini.py  detector_gpt_oss_120b.py  main.py
backend/server/PROMPTS/: ZS_prompt.txt
backend/server/api/routes/: detect.py  health.py
backend/server/core/: detector.py
backend/server/services/: llm_client.py
backend/server/utils/: prompt_loader.py
backend/services/: llm_client.py
backend/tests/: conftest.py  test_detect_api.py  test_detect_security.py  test_detect_stream_api.py  test_detector.py  test_document_reader.py  test_guard.py  test_llm_client.py  test_prompt_loader.py  test_risk.py
backend/utils/: logger.py  prompt_loader.py
extension/: PLATFORM_ARCHITECTURE.md  README.md  content.js  manifest.json  popup.css  popup.html  popup.js
extension/src/: config.js  main.js
extension/src/controllers/: fileInterceptor.js  messageAnalyzer.js  sendInterceptor.js
extension/src/dom/: chatSelectors.js
extension/src/services/: detectorClient.js  fileAnalyzer.js  pdfAnalyzer.js  riskUtils.js
extension/src/state/: alertStore.js  settings.js
extension/src/ui/: highlights.js  loadingState.js  panel.js
extension/tests/: alertStore.test.js  chatSelectors.test.js  detectorClient.test.js  fileAnalyzer.test.js  fileInterceptor.test.js  highlights.test.js  loadingState.test.js  panel.test.js  riskUtils.test.js  sendInterceptor.test.js
multiagent-firewall/: .env.example  README.md  pyproject.toml
multiagent-firewall/integration_tests/: .env.example  .gitignore  conftest.py  prompts_test_cases.yaml  prompts_test_cases2.yaml  run_integration_tests.sh  run_single_test.py  run_tests.sh  test_end_to_end_detection.py
multiagent-firewall/multiagent_firewall/: __init__.py  config.py  constants.py  llm_detector.py  orchestrator.py  orchestrator_tool_agent.py  pipeline.json  registry.py  routers.py  types.py  utils.py
multiagent-firewall/multiagent_firewall/config/: __init__.py  detection.json  detection.py  env.py  file_types.py  pipeline.json  registry.py
multiagent-firewall/multiagent_firewall/detectors/: __init__.py  base.py  code_similarity.py  dlp.py  llm.py  ner.py  ocr.py  types.py  utils.py
multiagent-firewall/multiagent_firewall/nodes/: __init__.py  anonymizer.py  common.py  detection.py  detectors.py  document.py  policy.py  preprocessing.py  risk.py
multiagent-firewall/multiagent_firewall/prompts/: __init__.py  generic.txt  ocr-detector.txt  sensitive-data-llm-prompt.txt  utils.py
multiagent-firewall/multiagent_firewall/utils/: __init__.py  core.py  exceptions.py  validation.py
multiagent-firewall/src/multiagent_firewall/: __init__.py  orchestrator.py
multiagent-firewall/tests/: conftest.py  test_anonymizer_node.py  test_code_similarity.py  test_compute_risk_level.py  test_detection_nodes.py  test_dlp_detectors.py  test_document.py  test_file_validation.py  test_ingestion.py  test_llm.py  test_llm_detector.py  test_llm_ocr_detector.py  test_llm_ocr_node.py  test_ocr_detector.py  test_orchestrator.py  test_orchestrator_routing.py  test_orchestrator_stream_updates.py  test_other_field_handling.py  test_policy.py  test_prompts.py  test_risk.py  test_routers.py
multiagent-firewall/tests/fixtures/: stable_detection.json
proxy/: .env.example  README.md  addon.py  config.py  main.py  pyproject.toml  sensitive_data_detector.py
proxy/app/: config.py  main.py  sensitive_data_detector.py
proxy/tests/: test_image_extraction.py  test_proxy.py
tests/: Middleware.py
tests/CLAUDE/: pii_detection_sample_claude-3-haiku_1000_FS.json  pii_detection_sample_claude_ZS_1000.json  pii_detection_sample_claude_ZS_enriquecido_1000.json
tests/GEMINI/: pii_detection_sample_Gemini_1.5_pro_ZS_1000.json  pii_detection_sample_Gemini_1.5pro_FS_1000.json  pii_detection_sample_Gemini_1.5pro_ZS_enriquecido_1000.json
tests/GPT-4o-MINI/: pii_detection_sample_gpt-4o-mini_FS.json  pii_detection_sample_gpt_4o_mini_1000_ZS_enriquecido.json  pii_detection_sample_gpt_4o_mini_ZS_1000.json
tests/GPT-OSS-120b/: pii_detection_sample_gpt-oss-120b_Groq_paid_1000_FS.json  pii_detection_sample_gpt-oss-120b_Groq_paid_1000_ZS.json  pii_detection_sample_gpt-oss-120b_Groq_paid_1000_ZS_enriquecido.json
tests/LLAMA4_Scout/: Llama4_scout_Groq.py  pii_detection_sample_llama-4-scout_Groq_1000_FS.json  pii_detection_sample_llama4_scout_Groq_1000_ZS.json  pii_detection_sample_llama4_scout_Groq_1000_ZS_enriquecido.json
tests/PROMPTS/: FS_prompt.txt
