[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-firewall"
version = "0.1.0"
description = "Multiagent firewall for LLM interactions"
authors = [{name = "Hugo Garcia"}]
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "typing_extensions>=4.7",
]

[tool.setuptools.packages.find]
include = ["multiagent_firewall*"]
