[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-firewall"
version = "0.1.0"
description = "Multiagent firewall for LLM interactions"
authors = [{name = "Hugo Garcia"}]
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain-litellm",
    "typing_extensions>=4.7",
]

[project.optional-dependencies]
file-analysis = [
    "pdfplumber",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]
ner = [
    "gliner>=0.1.15",
]

[dependency-groups]
test = [
    "pytest>=9.0.1",
    "pyyaml>=6.0",
    "datasets>=2.19.0",
]

[tool.setuptools.package-data]
"multiagent_firewall" = ["prompts/*.txt"]

[tool.setuptools.packages.find]
include = ["multiagent_firewall*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "ignore:Pydantic serializer warnings:UserWarning:pydantic.main",
]
