[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy"
version = "0.2.0"
description = "Transparent proxy using mitmproxy that intercepts LLM API calls for sensitive data detection"
authors = [{ name = "Hugo Garcia" }]
requires-python = ">=3.10"
dependencies = [
    "mitmproxy>=10.0.0",
    "httpx",
    "python-dotenv",
]

[dependency-groups]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]
